[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_rapier2d = "0.20.0"
rand = "0.8.4"
bevy_ggrs = { version = "0.11", features = ["wasm-bindgen"] }
matchbox_socket = { version = "0.5", features = ["ggrs-socket"] }
bevy_asset_loader = "0.14"